@startuml

title __LEVEL3's Class Diagram__\n

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.Consumer {
        + consume()
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.Main {
        {static} + main()
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.Service {
        + feature()
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.ServiceA {
        + feature()
        - featureA()
    }
  }
  

  namespace decoupling.levels.level3 {
    class decoupling.levels.level3.ServiceB {
        + feature()
        + featureB()
        - legacyFeature()
    }
  }
  

  decoupling.levels.level3.ServiceA -up-|> decoupling.levels.level3.Service
  decoupling.levels.level3.ServiceB -up-|> decoupling.levels.level3.Service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
